--- a/force-app/main/default/classes/InvokeProcessLargeDataFunction.cls
+++ b/force-app/main/default/classes/InvokeProcessLargeDataFunction.cls
@@ -3,6 +3,11 @@ public class InvokeProcessLargeDataFunction {
     @InvocableMethod(label='Find_Schools')
     public static List<String> invoke(List<String> data) {
 
+        // functions.Function myFunction = functions.Function.get('AcmeFunctionProject.myfunction');
+        // functions.FunctionInvocation invocation = myFunction.invoke('{"name":"MyAccount"}');
+        // String jsonResponse = invocation.getResponse();
+
+
         string functionname = data[0];
         string payload = '{"latitude": "36.169090", "longitude": "-115.140579", "length": 5}';
         // Instantiate the function
