Added apex class

--- a/force-app/main/default/classes/InvokeProcessLargeDataFunction.cls
+++ b/force-app/main/default/classes/InvokeProcessLargeDataFunction.cls
@@ -1,14 +1,14 @@
 public class InvokeProcessLargeDataFunction {
 
     @InvocableMethod(label='Find_Schools')
-    public static List<String> invoke(List<String> data) {
+    public static List<String> invoke() {
 
         // functions.Function myFunction = functions.Function.get('AcmeFunctionProject.myfunction');
         // functions.FunctionInvocation invocation = myFunction.invoke('{"name":"MyAccount"}');
         // String jsonResponse = invocation.getResponse();
 
 
-        string functionname = data[0];
+        string functionname = 'AcmeFunctionProject.processlargedataset';
         System.debug('---> function  name : ' + functionname);
         string payload = '{"latitude": "36.169090", "longitude": "-115.140579", "length": 5}';
         // Instantiate the function
@@ -28,6 +28,9 @@ public class InvokeProcessLargeDataFunction {
     
         List<String> response = new List<String>();
         response.add(invocation.getResponse());
+        for(String s : response) {
+          System.debug(s);
+        }
     
         // Return the response to the flow
         return response;
